@@ -147,6 +147,7 @@ We hope this new theme will bring accessibility improvements for users who perfe
  * Fix initialisation of commenting widgets within StreamField (Thibaud Colas)
  * Fix various regressions in the commenting UI (Thibaud Colas)
  * Prevent TableBlock from becoming uneditable after save (Sage Abdullah)
+ * Correctly show the "new item" badge within menu sections previously dismissed (Sage Abdullah)
 
 ### Documentation
 
